# mcp-weather-education

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  weather.py
dockers/: entrypoint.sh
src/: main.py  weather.py
tests/: test_1.cmd
